<resources>
    <string name="app_name">LitGo</string>
    <!-- FOR THE LOGIN ACTIVITY SCREEN -->
    <string name="welcome_title_textview">Welcome back!</string>
    <string name="username_edittext_prompt">Enter your username</string>
    <string name="email_edittext_prompt">Enter your email</string>
    <string name="password_edittext_prompt">Enter your password</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="create_account_button_text">Create an account</string>

    <string name="login_error_textview_text">The email and/or password\nentered is incorrect.</string>
    <string name="create_account_prompt_textview_text">New here? Create an account</string>

    <!-- FOR THE CREATE AN ACCOUNT SCREEN -->
    <string name="create_button_text">Create</string>
    <string name="sign_in_prompt_textview_text">Have an account already?</string>
    <string name="create_account_full_name_edittext_prompt">Full Name</string>
    <string name="create_account_address_edittext_prompt">Address</string>
    <string name="create_account_email_edittext_prompt">Email</string>
    <string name="create_account_password_edittext_prompt">Password</string>
    <string name="create_account_popup_text">Account created! Please login</string>
    <string name="create_account_error_textview_text">An error has occurred.\nPlease ensure all your details\nhave been entered correctly.</string>
    <string name="create_account_error_prompt"> is empty or invalid.</string>

    <string name="take_photo">Take Photo</string>

    <!-- FOR LITTER SITE (either item and/or full details view) -->
    <string name="litter_site_status_textview_text">Status:</string>
    <string name="litter_site_harm_textview_text">Harm:</string>
    <string name="litter_site_textview_text">Report Details</string>
    <string name="litter_site_title_textview_text">Details</string>
    <string name="litter_site_points_available_textview_text">Points Available:</string>
    <string name="litter_site_reported_textview_text">Reported at </string>
    <string name="litter_site_see_all_photos_textview_text">See All Photos</string>
    <string name="litter_site_accept_button_text">Accept</string>
    <string name="litter_site_decline_button_text">Decline</string>
    <string name="litter_site_completed_button_text">Completed</string>
    <string name="litter_site_in_progress_textview_text">In Progress</string>

    <!-- FOR USER PROFILE SCREEN -->
    <string name="user_profile_lifetime_achievements_textview_text">Lifetime Achievements</string>
    <string name="user_profile_joined_textview_text">Lifetime Achievements</string>
    <string name="user_profile_textview_text">My Profile</string>

    <string name="user_recent_activity_textview_text">Recent Activity</string>
    <string name="see_more_textview_text">See more</string>

    <string name="user_litter_sites_textview_text">My Reports</string>
    <string name="user_cleanups_textview_text">My Cleanups</string>
    <string name="user_all_textview_text">All</string>
    <string name="user_all_litter_sites_and_cleanups_textview_text">All My Reports and Cleanups</string>

    <string-array name="litter_site_sort_spinner_array">
        <item>Today</item>
        <item>Past Week</item>
        <item>Past Month</item>
        <item>All</item>
    </string-array>

    <string-array name="litter_site_filter_spinner_array">
        <item>My Reports</item>
        <item>My Cleanups</item>
        <item>All</item>
    </string-array>

    <string name="reward_offer_validity_textview_text">Offer valid through </string>
    <string name="reward_redeem_button_text">Redeem</string>
    <string name="reward_points_imageview_caption">Points</string>

    <string name="back_textview_text">Back</string>

    <string name="welcome">"Welcome! "</string>

    <!-- TEST STRINGS -->
    <string name="test_litter_site_reported_date">Reported at Month Day, Year: 2:48pm</string>
    <string name="test_litter_site_harm">Caution</string>
    <string name="test_litter_site_points">478</string>
    <string name="test_litter_site_coordinates">31.230391, 121.473701</string>
    <string name="test_litter_site_distance">2 min</string>
    <string name="test_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis. Aliquet eget sit amet tellus cras adipiscing. Sed felis eget velit aliquet sagittis id consectetur. Scelerisque viverra mauris in aliquam. Nunc congue nisi vitae suscipit tellus mauris. Enim nunc faucibus a pellentesque sit amet. Egestas erat imperdiet sed euismod. Id velit ut tortor pretium viverra suspendisse potenti. Eu non diam phasellus vestibulum lorem. In dictum non consectetur a erat nam at. Odio ut sem nulla pharetra diam sit amet nisl. Et netus et malesuada fames ac.
Nullam eget felis eget nunc lobortis mattis. Sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt. Nulla aliquet porttitor lacus luctus accumsan tortor posuere ac. Urna neque viverra justo nec ultrices dui. Aliquam ut porttitor leo a diam sollicitudin. Facilisis volutpat est velit egestas dui id ornare arcu odio. Vulputate eu scelerisque felis imperdiet proin. Massa sapien faucibus et molestie ac feugiat. Elit sed vulputate mi sit. Tellus at urna condimentum mattis pellentesque id nibh tortor. Consequat interdum varius sit amet. Aliquam sem et tortor consequat. Facilisi nullam vehicula ipsum a arcu cursus vitae congue mauris. Lacus laoreet non curabitur gravida arcu ac tortor dignissim convallis. Accumsan lacus vel facilisis volutpat est velit egestas. Facilisi cras fermentum odio eu feugiat pretium nibh. At lectus urna duis convallis convallis tellus. Aliquam purus sit amet luctus.
Vitae proin sagittis nisl rhoncus mattis. Tortor aliquam nulla facilisi cras fermentum odio eu feugiat pretium. Sem et tortor consequat id. Imperdiet dui accumsan sit amet nulla facilisi morbi tempus. Magna fringilla urna porttitor rhoncus dolor purus non. Hac habitasse platea dictumst quisque sagittis purus sit. Tristique risus nec feugiat in fermentum. Integer malesuada nunc vel risus. Nec tincidunt praesent semper feugiat nibh sed pulvinar. Libero id faucibus nisl tincidunt eget nullam non nisi. Id cursus metus aliquam eleifend mi in.
Nullam non nisi est sit amet facilisis magna etiam tempor. Quisque egestas diam in arcu. Sit amet purus gravida quis blandit turpis cursus in hac. Scelerisque felis imperdiet proin fermentum leo vel orci. Sagittis nisl rhoncus mattis rhoncus urna neque viverra justo. Sit amet risus nullam eget felis eget nunc. Fermentum odio eu feugiat pretium. Ornare quam viverra orci sagittis eu volutpat. Leo urna molestie at elementum eu facilisis sed odio morbi. Integer feugiat scelerisque varius morbi enim nunc faucibus a pellentesque. Vestibulum sed arcu non odio euismod. Sit amet consectetur adipiscing elit pellentesque habitant morbi tristique senectus. Diam vel quam elementum pulvinar etiam non.
Eget magna fermentum iaculis eu non diam. Feugiat in ante metus dictum at tempor commodo. Augue lacus viverra vitae congue. Cursus eget nunc scelerisque viverra. Morbi enim nunc faucibus a pellentesque sit amet porttitor. Amet nisl suscipit adipiscing bibendum est ultricies integer quis. Ullamcorper malesuada proin libero nunc consequat interdum. Sollicitudin tempor id eu nisl. Tellus integer feugiat scelerisque varius morbi enim nunc faucibus a. Gravida quis blandit turpis cursus in. Dignissim sodales ut eu sem integer vitae justo. Iaculis urna id volutpat lacus laoreet non curabitur gravida. Metus dictum at tempor commodo. Vitae semper quis lectus nulla at. Massa placerat duis ultricies lacus sed turpis tincidunt. Maecenas accumsan lacus vel facilisis volutpat est velit egestas dui. Viverra justo nec ultrices dui. Id venenatis a condimentum vitae.
    </string>
    <string name="test_reward_name">$10 Starbucks Gift Card</string>
    <string name="test_reward_description">Enjoy a beverage of your choice, on us!</string>
    <string name="test_reward_expiry_date">September 1st, 2023</string>
    <string name="test_reward_points">250</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>