<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.CreateAccountFragment"
    android:background="@color/green">

    <TextView
        android:id="@+id/create_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:text="@string/create_account_button_text"
        android:theme="@style/LitGo.TextView.Title.White"/>

    <EditText
        android:id="@+id/full_name_edittext"
        android:hint="@string/create_account_full_name_edittext_prompt"
        android:autofillHints="name"
        android:layout_width="@dimen/login_input_width"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/create_title_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/vertical_spacing"
        android:textColor="@color/white"/>


    <EditText
        android:id="@+id/address_edittext"
        android:hint="@string/create_account_address_edittext_prompt"
        android:autofillHints="postalCode"
        android:layout_width="@dimen/login_input_width"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/full_name_edittext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/email_edittext"
        android:layout_marginTop="@dimen/vertical_spacing"
        android:textColor="@color/white" />


    <EditText
        android:id="@+id/email_edittext"
        android:hint="@string/create_account_email_edittext_prompt"
        android:autofillHints="emailAddress"
        android:layout_width="@dimen/login_input_width"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/address_edittext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/password_edittext"
        android:layout_marginTop="@dimen/vertical_spacing"
        android:textColor="@color/white"/>
    
    <EditText
        android:id="@+id/password_edittext"
        android:hint="@string/create_account_password_edittext_prompt"
        android:autofillHints="password"
        android:layout_width="@dimen/login_input_width"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email_edittext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/vertical_spacing"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_account_button"
        android:layout_width="@dimen/login_input_width"
        android:layout_height="wrap_content"
        android:text="@string/create_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext"
        app:layout_constraintVertical_bias="0.1"
        android:theme="@style/LitGo.Button.White" />

    <TextView
        android:id="@+id/create_account_error_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_account_button"
        android:layout_marginTop="@dimen/vertical_spacing"
        android:text="@string/create_account_error_textview_text"
        android:theme="@style/LitGo.TextView.LoginErrorTextView"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_prompt_textview_text"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sign_in_button"
        android:layout_marginBottom="@dimen/vertical_spacing"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_button"
        android:layout_width="@dimen/login_input_width"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account_button"
        app:layout_constraintVertical_bias="0.7"
        android:theme="@style/LitGo.Button.Green" />

</androidx.constraintlayout.widget.ConstraintLayout>