<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:padding="@dimen/screen_margin"
    android:background="@color/lightest_gray"
    tools:context=".ui.litterSite.LitterSiteFragment">


    <LinearLayout
        android:id="@+id/back_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/back_100_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_textview_text"/>
    </LinearLayout>

    <!-- FULL CONTAINER -->
    <LinearLayout
        android:id="@+id/litter_site_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/litter_site_container_min_height"
        android:maxHeight="@dimen/litter_site_container_max_height"
        app:layout_constraintTop_toBottomOf="@id/back_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/vertical_spacing"
        android:orientation="vertical"
        android:background="@drawable/rectangle_container"
        android:padding="@dimen/screen_margin"
        android:elevation="@dimen/elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="top">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/litter_site_title_textview_text"
                android:theme="@style/LitGo.Text.Header1" />
            <TextView
                android:id="@+id/litter_site_report_date_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textSize="@dimen/paragraph_text_size"
                android:text="@string/test_litter_site_reported_date"
                android:gravity="end|top"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/litter_site_status_textview_text"
                    android:theme="@style/LitGo.Text.Header2"/>
                <ImageView
                    android:id="@+id/litter_site_status_icon_imageview"
                    android:layout_width="@dimen/litter_site_icon_size"
                    android:layout_height="@dimen/litter_site_icon_size"
                    android:layout_marginStart="@dimen/litter_site_text_icon_spacing"
                    android:src="@drawable/do_not_disturb_100_black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/litter_site_label_spacing">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/litter_site_harm_textview_text"
                    android:theme="@style/LitGo.Text.Header2"/>
                <TextView
                    android:id="@+id/litter_site_harm_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_litter_site_harm"
                    android:theme="@style/LitGo.Text.Header2"
                    android:layout_marginStart="@dimen/litter_site_text_icon_spacing" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/litter_site_description_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_lorem_ipsum"
            android:textSize="@dimen/paragraph_text_size"
            android:maxLines="10"
            android:textAlignment="textStart"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/vertical_spacing">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/litter_site_points_available_textview_text"
                android:theme="@style/LitGo.Text.Paragraph.Bold"/>
            <TextView
                android:id="@+id/litter_site_points_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_litter_site_points"
                android:theme="@style/LitGo.Text.Paragraph"
                android:layout_marginStart="@dimen/litter_site_text_icon_spacing"/>
            <ImageView
                android:layout_width="@dimen/litter_site_icon_size"
                android:layout_height="@dimen/litter_site_icon_size"
                android:layout_marginStart="@dimen/litter_site_text_icon_spacing"
                android:src="@drawable/leaf_96_green"/>
        </LinearLayout>

        <!-- Location and distance sectional -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="@dimen/litter_site_icon_size"
                    android:layout_height="@dimen/litter_site_icon_size"
                    android:src="@drawable/location_96_black"/>
                <TextView
                    android:id="@+id/litter_site_coordinates_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/litter_site_text_icon_spacing"
                    android:text="@string/test_litter_site_coordinates"
                    android:textSize="@dimen/paragraph_text_size"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/litter_site_label_spacing">
                <ImageView
                    android:layout_width="@dimen/litter_site_icon_size"
                    android:layout_height="@dimen/litter_site_icon_size"
                    android:src="@drawable/walking_96_black"/>
                <TextView
                    android:id="@+id/litter_site_distance_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/litter_site_text_icon_spacing"
                    android:text="@string/test_litter_site_distance"
                    android:textSize="@dimen/paragraph_text_size"/>
            </LinearLayout>

        </LinearLayout>
        <!-- END Location and distance sectional -->

<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/litter_site_photos_recycler_view"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="100dp"-->
<!--            android:orientation="horizontal"-->
<!--            tools:itemCount="2"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rounded_square_100_green"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rounded_square_100_green"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rounded_square_100_green"/>
        </LinearLayout>
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/see_more_textview_text"-->
<!--            android:gravity="end"-->
<!--            android:textSize="@dimen/subtitle_text_size"/>-->





    </LinearLayout>
    <!-- END FULL CONTAINER -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/litter_site_layout"
        android:layout_marginTop="@dimen/vertical_spacing"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/litter_site_accept_button_text"
            android:theme="@style/LitGo.Button.Green"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginStart="@dimen/vertical_spacing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/litter_site_decline_button_text"
            android:theme="@style/LitGo.Button.Gray"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>